# crewai_deploy_2

./: README.md  pyproject.toml
src/crew_for_deploy_2/: crew.py  main.py
