[project]
name = "crew_for_deploy_2"
version = "0.1.0"
description = "crew_for_deploy_2 using crewAI"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10,<3.13"
dependencies = { crewai = { version = ">=0.102.0,<1.0.0", extras = ["tools"] } }

[project.scripts]
crew_for_deploy_2 = "crew_for_deploy_2.main:run"
run_crew = "crew_for_deploy_2.main:run"
train = "crew_for_deploy_2.main:train"
replay = "crew_for_deploy_2.main:replay"
test = "crew_for_deploy_2.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"
